--- a/task1/index.html
+++ b/task1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <h1>First task</h1>
-    <img src="acmlogo.png" alt="logo">
+    <img src="ipecacm logo.png" alt="logo">
     <span>This is my first task for <b>SIG WEB ACM</b></span>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Nemo asperiores cum sequi animi, incidunt deserunt, beatae commodi enim sapiente nobis repellat molestias rerum in nihil dolorem blanditiis ipsum voluptatem eligendi.</p>
 <div>
