--- a/task1/index.html
+++ b/task1/index.html
@@ -10,17 +10,19 @@
    <h1>First task</h1>
     <img src="ipecacm logo.png" alt="logo">
     <span>This is my first task for <b>SIG WEB ACM</b></span>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Nemo asperiores cum sequi animi, incidunt deserunt, beatae commodi enim sapiente nobis repellat molestias rerum in nihil dolorem blanditiis ipsum voluptatem eligendi.</p>
+    <p>ACM, the Association for Computing Machinery founded in New York on September 15, 1947, is the world’s largest educational and scientific society connecting and convening the researchers, educators and professionals to apportion resources, inspire discourse and scrutinize and address the field’s challenges.
+         <br>The IPEC ACM Student Chapter is an organized representative association that upholds the right of students, develop high standards of honour and civic responsibility and promote cooperation between the student body, faculty, and administration.
+         The Chapter is chartered by ACM and operated exclusively for educational and scientific purposes to promote an increased knowledge of and greater interest in the contributions of science, design, development, languages, management and applications of modern computing,improvement of the learning and working environments of students in computing and a means of communication between the persons having interest in computing.</p>
 <div>
     <ol>
-        <li>hello</li>
-        <li>hi</li>
-        <li>hey</li>
+        <li>Tech</li>
+        <li>Web</li>
+        <li>Graph</li>
     </ol>
     <ul>
-        <li>hello</li>
-        <li>hi</li>
-        <li>hey</li>
+        <li>Python</li>
+        <li>C and Ds </li>
+        <li>byy</li>
     </ul>
 </div>
 
